# alang

./: Cargo.toml  README.md  latest.md
.github/workflows/: buildmake.yaml  compile.yaml  site.yml  static.yml
cli/: Cargo.toml
cli/src/: check_config.rs  check_update.rs  main.rs
cli/src/compiler/: mod.rs
cli/src/project_create/: get_name.rs  mod.rs  show_templates.rs  templates.rs
cli/src/updater/: get_updater.rs  mod.rs
cli/src/utils/: get_release_notes.rs  mod.rs
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/compiler/: mod.rs  read_packages.rs
compiler/src/compiler/compile_code/: compile_code.rs  compile_variables.rs  mod.rs
compiler/src/utils/: mod.rs  package.rs
compiler/test-compiler/: packages.css
compiler/test-compiler/app/: variable.main.css  variables.main.css
compiler/test-compiler/src/: main.css
docs/: index.html  package.json  pnpm-lock.yaml  postbuild.js  tailwind.config.ts  vite.config.ts
docs/src/: App.tsx  index.css  main.tsx
docs/src/components/Navigation/: Hamburger.tsx  Nav.tsx  index.css  index.tsx
docs/src/pages/Home/: Home.tsx
docs/src/pages/Install/: Install.tsx  index.tsx  install.css
interpreter/: Cargo.toml
js/: index.js  package.js  package.json  pnpm-lock.yaml  sample.js  test.js  zip.js
packager/: Cargo.toml
packloader/: Cargo.toml
packloader/src/: main.rs
src/: download.rs  get_urls.rs  main.rs  permission.rs
templates/blank/: packages.css
templates/blank/app/: variables.main.css
templates/blank/src/: main.css
templates/hello world/: packages.css
templates/hello world/app/: variables.main.css
templates/hello world/src/: main.css
tests/hello-world/: packages.css  variables.css
tests/sample-package/: subscript.css
updater/: Cargo.toml
