[package]
name = "alang"
version = "0.0.7"
edition = "2021"
description = "Alang installer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chalk_rs = "1.0.1"
downloader = "0.2.7"
indicatif = "0.17.5"
inquire = "0.6.2"
reqwest = {version = "0.11.18", features = ["blocking","json"] }
serde = {version = "1.0.164", features = ["derive"]}
zip = "0.6.6"
