[package]
name = "alang"
version = "0.0.6"
edition = "2021"
description = "The ALang CLI Tool"
authors = ["AHQ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chalk_rs = "1.0.1"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
inquire = "0.6.2"
open = "4.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
termimad = "0.23.0"
