[package]
name = "compiler"
version = "0.0.6"
edition = "2021"
description = "Convert the alang code into ahq-asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["cargo"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
