[package]
name = "compiler"
version = "0.0.9"
edition = "2021"
description = "Convert the alang code into ahq-asm"
authors = ["AHQ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chalk_rs = "1.0.1"
clap = { version = "4.3.4", features = ["cargo"] }
indicatif = "0.17.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
